Wed Jun  2 13:27:23 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Removed !FIXED_BUG_ONLY flag for UserdataCopyCount test.

Wed Jun  2 13:22:17 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/UserdataCopyCount/Component/UCC_Test_Component_exec.h:
        * connectors/dds4ccm/tests/UserdataCopyCount/Component/UCC_Test_Component_exec.cpp:
          Resolved test issues.

Wed Jun  2 11:17:28 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/dds4ccm_ddsonly.mpb:
          DDS specific file compilation

        * connectors/dds4ccm/tests/OneFile/Multiple/OFM_Connector.mpc:
        * connectors/dds4ccm/tests/OneFile/Single/OneFile_Connector.mpc:
          Making use of dds4ccm_ddsonly.

Wed Jun  2 08:46:23 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/tests/Parsing/InvalidConfigPropValueDeclaration.cdp:
        * DAnCE/tests/Parsing/InvalidConnection.cdp:
        * DAnCE/tests/Parsing/InvalidDatatypeValue.cdp:
        * DAnCE/tests/Parsing/InvalidElement.cdp:
        * DAnCE/tests/Parsing/InvalidReference.cdp:
          Ready to deploy real components.

        * DAnCE/tests/Parsing/PlanLauncher:
        * DAnCE/tests/Parsing/PlanLauncher/Component:
        * DAnCE/tests/Parsing/PlanLauncher/Component/ParseError_Test_Component.idl:
        * DAnCE/tests/Parsing/PlanLauncher/Component/ParseError_Test_Component.mpc:
        * DAnCE/tests/Parsing/PlanLauncher/Component/ParseError_Test_Component_exec.h:
        * DAnCE/tests/Parsing/PlanLauncher/Component/ParseError_Test_Component_exec.cpp:
        * DAnCE/tests/Parsing/PlanLauncher/descriptors:
        * DAnCE/tests/Parsing/PlanLauncher/descriptors/run_test.pl:
        * DAnCE/tests/Parsing/PlanLauncher/descriptors/run_test_msm.pl:
        * bin/ciao_tests.lst:
          Added test which tests the return value of the PlanLauncher
          when there're errors in a deployment plan.
